--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador Imágenes Pixabay</title>
+    <title>Image Search Engine Pixabay</title>
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
 
-    <h1 class="text-center text-3xl text-white my-10 font-bold uppercase">Buscador de Imágenes Pixabay</h1>
+    <h1 class="text-center text-3xl text-white my-10 font-bold uppercase">Image Search Engine Pixabay</h1>
 
     <div class="buscador max-w-lg mx-auto ">
         <form id="formulario" class="">
             <div>
                 <label 
                     class="block text-white font-bold uppercase"
-                >Término Búsqueda</label>
+                >Text Search</label>
                 <input 
                     type="text"
                     class="mt-3 rounded w-full p-2 "
-                    placeholder="Término de búsqueda. Ejemplo: Café o Futbol"
+                    placeholder="Text search. Sample: Coffee or Football"
                     id="termino"
                 />
 
                 <input 
                     type="submit"
-                    value="Buscar Imágenes"
+                    value="Search Images"
                     class="mt-5 w-full py-2 bg-yellow-400 cursor-pointer font-bold uppercase hover:bg-yellow-500 rounded"
                 >   
             </div>
